--- a/app/src/main/res/layout/activity_lista_u.xml
+++ b/app/src/main/res/layout/activity_lista_u.xml
@@ -22,6 +22,7 @@
             android:id="@+id/textView28"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="Listar Usuarios"
             android:textAlignment="center"
             android:textColor="@color/hyperlink"
