--- a/app/src/main/res/layout/activity_lista_u.xml
+++ b/app/src/main/res/layout/activity_lista_u.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_light_background"
-    android:backgroundTint="#4CAF50"
+    android:background="@color/white"
+    android:backgroundTint="@color/white"
     tools:context=".actividades.actividades.admin.ListaU">
 
     <LinearLayout
@@ -29,14 +29,32 @@
             android:textSize="34sp"
             android:textStyle="bold" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcvListarUsersForADM"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="285dp"
-            android:layout_marginTop="25dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
+            android:background="@color/white"
+            android:backgroundTint="@color/white">
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcvListarUsersForADM"
+                android:layout_width="match_parent"
+                android:layout_height="285dp"
+                android:layout_marginTop="25dp"
+                android:paddingTop="16dp"
+                android:visibility="invisible"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <ProgressBar
+                android:id="@+id/pb_ListarUsers_ADM"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="visible" />
+
+        </FrameLayout>
 
         <TextView
             android:id="@+id/txtvCantUsers_ListU"
