--- a/app/src/main/res/layout/list_users.xml
+++ b/app/src/main/res/layout/list_users.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:backgroundTint="@color/teal_200"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
