--- a/app/src/main/res/layout/activity_consultar_reserva_user.xml
+++ b/app/src/main/res/layout/activity_consultar_reserva_user.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="220dp"
         android:layout_marginEnd="24dp"
         android:orientation="vertical"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
