--- a/app/src/main/res/layout/list_users.xml
+++ b/app/src/main/res/layout/list_users.xml
@@ -5,168 +5,180 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:backgroundTint="@color/teal_200"
+    android:backgroundTint="#B8C1B8"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <!-- TextView para mostrar el número -->
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="16dp">
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="10dp"
+            android:background="@color/white"
+            android:backgroundTint="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="281dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/icon_contact" />
-
-                <LinearLayout
-                    android:layout_width="255dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingLeft="3dp">
-
-                    <TextView
-                        android:id="@+id/textView41"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="DNI"
-                        android:textAlignment="center"
-                        android:textAllCaps="true"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView29"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Nombre:"
-                        android:textAllCaps="true"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView31"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Apellido:"
-                        android:textAllCaps="true"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView32"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Correo:"
-                        android:textAlignment="viewStart"
-                        android:textAllCaps="true"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView36"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Celular:"
-                        android:textAlignment="viewStart"
-                        android:textAllCaps="true"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView37"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Registro:"
-                        android:textAlignment="viewStart"
-                        android:textAllCaps="true"
-                        android:textStyle="bold" />
-                </LinearLayout>
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/txtv_dni_rcv_ListUsers"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="72673554"
-                        android:textAlignment="viewStart"
-                        android:textAllCaps="true"
-                        android:textStyle="bold" />
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="281dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/icon_contact" />
 
-                    <TextView
-                        android:id="@+id/txtv_nombre_rcv_ListUsers"
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="255dp"
                         android:layout_height="wrap_content"
-                        android:text="Milhos Kassian" />
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:paddingLeft="3dp">
 
-                    <TextView
-                        android:id="@+id/txtv_apellido_rcv_ListUsers"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Sihuay Barzola" />
+                        <TextView
+                            android:id="@+id/textView41"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="DNI"
+                            android:textAlignment="center"
+                            android:textAllCaps="true"
+                            android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/txtv_email_rcv_ListUsers"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="milhos@gmail.com" />
+                        <TextView
+                            android:id="@+id/textView29"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Nombre:"
+                            android:textAllCaps="true"
+                            android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/txtv_cel_rcv_ListUsers"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="997653086" />
+                        <TextView
+                            android:id="@+id/textView31"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Apellido:"
+                            android:textAllCaps="true"
+                            android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/txtv_fechaR_rcv_ListUsers"
+                        <TextView
+                            android:id="@+id/textView32"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Correo:"
+                            android:textAlignment="viewStart"
+                            android:textAllCaps="true"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textView36"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Celular:"
+                            android:textAlignment="viewStart"
+                            android:textAllCaps="true"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textView37"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Registro:"
+                            android:textAlignment="viewStart"
+                            android:textAllCaps="true"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="2024-12-24" />
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/txtv_dni_rcv_ListUsers"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="72673554"
+                            android:textAlignment="viewStart"
+                            android:textAllCaps="true"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/txtv_nombre_rcv_ListUsers"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Milhos Kassian" />
+
+                        <TextView
+                            android:id="@+id/txtv_apellido_rcv_ListUsers"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Sihuay Barzola" />
+
+                        <TextView
+                            android:id="@+id/txtv_email_rcv_ListUsers"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="milhos@gmail.com" />
+
+                        <TextView
+                            android:id="@+id/txtv_cel_rcv_ListUsers"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="997653086" />
+
+                        <TextView
+                            android:id="@+id/txtv_fechaR_rcv_ListUsers"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="2024-12-24" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
+                <Button
+                    android:id="@+id/btn_verRsv_rcv_ListUsers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/btnBieOrange"
+                    android:drawableLeft="@drawable/list_ul_solid"
+                    android:drawablePadding="15dp"
+                    android:gravity="center"
+                    android:text="Ver Reservas (5)" />
+
+                <TextView
+                    android:id="@+id/txtv_position_rcv_ListUsers"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:gravity="center"
+                    android:text="#1"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold|italic" />
+
             </LinearLayout>
+        </FrameLayout>
+    </LinearLayout>
 
-            <Button
-                android:id="@+id/btn_verRsv_rcv_ListUsers"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Ver Reservas (5)" />
-
-            <TextView
-                android:id="@+id/txtv_position_rcv_ListUsers"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:gravity="center"
-                android:text="#1"
-                android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
-
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
