--- a/app/src/main/res/layout/activity_lista_rsv.xml
+++ b/app/src/main/res/layout/activity_lista_rsv.xml
@@ -43,7 +43,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:minHeight="48dp" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -80,7 +81,7 @@
             android:paddingStart="16dp"
             android:text="Cantidad de reservas:"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <LinearLayout
