--- a/app/src/main/res/layout/list_reservas.xml
+++ b/app/src/main/res/layout/list_reservas.xml
@@ -29,11 +29,12 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/img_rcv_ListRsv"
                     android:layout_width="281dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/icon_contact" />
+                    android:paddingHorizontal="10dp"
+                    app:srcCompat="@drawable/calendar_days_solid" />
 
                 <LinearLayout
                     android:layout_width="255dp"
@@ -150,14 +151,14 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btn_verRsv_rcv_ListUsers"
+                android:id="@+id/btn_verRsv_rcv_ListRsv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Ver PAGO" />
 
             <TextView
-                android:id="@+id/txtv_position_rcv_ListUsers"
+                android:id="@+id/txtv_position_rcv_ListRsv"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:gravity="center"
