--- a/app/src/main/res/layout/activity_bienvenido.xml
+++ b/app/src/main/res/layout/activity_bienvenido.xml
@@ -24,6 +24,15 @@
             android:textSize="20dp"
             android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="Selecciona una cancha de Futbol:"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
         <fragment
             android:id="@+id/frgMenu"
             android:name="com.example.myproyect.actividades.fragmentos.menu"
@@ -32,19 +41,24 @@
             tools:layout="@layout/fragment_menu" />
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
+            android:id="@+id/txtv_time_User"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Selecciona una cancha de Futbol"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:backgroundTint="@color/white"
+            android:text="2024-12-12 10:30"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/actvbtnCerrar"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="80dp"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="100dp"
             android:backgroundTint="@color/btnRegOrange"
 
             android:text="@string/bieBtnSalir"
