--- a/app/src/main/res/layout/activity_lista_rsv_adm.xml
+++ b/app/src/main/res/layout/activity_lista_rsv_adm.xml
@@ -23,11 +23,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Mis Reservas"
+            android:text="Reservas de todos los usuarios"
             android:textAlignment="center"
             android:textColor="@color/hyperlink"
             android:textSize="34sp"
             android:textStyle="bold" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <RadioButton
+                android:id="@+id/radioButton9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Año" />
+
+            <RadioButton
+                android:id="@+id/radioButton8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Mes" />
+
+            <RadioButton
+                android:id="@+id/radioButton7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Semana" />
+
+        </RadioGroup>
 
         <TextView
             android:id="@+id/textView30"
@@ -39,7 +64,7 @@
             android:textSize="20sp" />
 
         <Spinner
-            android:id="@+id/spnListar_Rsv"
+            android:id="@+id/spnListar_Rsv_ADM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -47,7 +72,7 @@
             android:minHeight="48dp" />
 
         <Switch
-            android:id="@+id/sw_Listar_rsv"
+            android:id="@+id/sw_Listar_rsv_adm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -60,7 +85,7 @@
             android:backgroundTint="#8BC34A">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcvListarRsvForUSR"
+                android:id="@+id/rcvListarRsvForADM"
                 android:layout_width="match_parent"
                 android:layout_height="285dp"
                 android:layout_marginTop="25dp"
@@ -71,7 +96,7 @@
             </androidx.recyclerview.widget.RecyclerView>
 
             <ProgressBar
-                android:id="@+id/pb_ListarRsv_CLI"
+                android:id="@+id/pb_ListarRsv_ADM"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -81,7 +106,7 @@
         </FrameLayout>
 
         <TextView
-            android:id="@+id/txtvCantRsv_ListRsv"
+            android:id="@+id/txtvCantRsv_ListRsv_ADM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
@@ -98,7 +123,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnRegresar_ListarRsv"
+                android:id="@+id/btnRegresar_ListarRsv_ADM"
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
@@ -106,7 +131,7 @@
                 android:text="Regresar" />
 
             <Button
-                android:id="@+id/btnUpdate_ListarRsv"
+                android:id="@+id/btnUpdate_ListarRsv_ADM"
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
