--- a/app/src/main/res/layout/activity_listar_reservas_admin.xml
+++ b/app/src/main/res/layout/activity_listar_reservas_admin.xml
@@ -6,119 +6,113 @@
     android:layout_height="match_parent"
     tools:context=".actividades.actividades.admin.ListarReservasADMIN_Activity">
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="272dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="26dp"
-        android:text="LISTAR RESERVAS DE TODOS LOS CLIENTES"
-        android:textColor="#D1A41E"
-        android:textSize="24sp"
-        android:textStyle="bold"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/txtvListadoRsvCLI_Admin"
-        android:layout_width="269dp"
-        android:layout_height="348dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="34dp"
-        android:text="Cargando...."
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spnListarRsvCLI_Admin" />
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LISTAR RESERVAS DE TODOS LOS CLIENTES"
+            android:textColor="#D1A41E"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="305dp"
-        android:layout_height="145dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="11dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12">
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <RadioButton
-            android:id="@+id/radioButton4"
+            <RadioButton
+                android:id="@+id/radioButton4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="AÑO" />
+
+            <RadioButton
+                android:id="@+id/radioButton5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="MES" />
+
+            <RadioButton
+                android:id="@+id/radioButton6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SEMANA" />
+
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:text="Seleccione una losa:"
+            android:textSize="16sp" />
+
+        <Spinner
+            android:id="@+id/spnListarRsvCLI_Admin"
+            android:layout_width="match_parent"
+            android:layout_height="48dp" />
+
+        <FrameLayout
+            android:id="@+id/frml_Carga"
+            android:layout_width="392dp"
+            android:layout_height="88dp"
+            android:visibility="visible">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <ProgressBar
+                android:id="@+id/progressBar3"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/txtvMonto_Adm"
+            android:layout_width="match_parent"
+            android:layout_height="21dp"
+            android:text="Cargando..."
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtvListadoRsvCLI_Admin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="AÑO" />
+            android:text="Cargando...."
+            android:textSize="20sp" />
 
-        <RadioButton
-            android:id="@+id/radioButton5"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="MES" />
+            android:layout_height="100dp"
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/radioButton6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SEMANA" />
+            <Button
+                android:id="@+id/btnSalir_ListaRsvCLI_Admin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Salir" />
 
-    </RadioGroup>
+            <Button
+                android:id="@+id/btnActualizar_ListaRsvCLI_Admin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ACTUALIZAR" />
 
-    <FrameLayout
-        android:id="@+id/frml_Carga"
-        android:layout_width="367dp"
-        android:layout_height="203dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="84dp"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spnListarRsvCLI_Admin">
+        </LinearLayout>
 
-    </FrameLayout>
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btnSalir_ListaRsvCLI_Admin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="40dp"
-        android:text="Salir"
-        app:layout_constraintStart_toEndOf="@+id/btnActualizar_ListaRsvCLI_Admin"
-        app:layout_constraintTop_toBottomOf="@+id/txtvMonto_Adm" />
-
-    <Button
-        android:id="@+id/btnActualizar_ListaRsvCLI_Admin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="40dp"
-        android:text="ACTUALIZAR"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtvMonto_Adm" />
-
-    <Spinner
-        android:id="@+id/spnListarRsvCLI_Admin"
-        android:layout_width="305dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
-
-    <TextView
-        android:id="@+id/txtvMonto_Adm"
-        android:layout_width="222dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="17dp"
-        android:text="Cargando..."
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtvListadoRsvCLI_Admin" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="259dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="17dp"
-        android:text="Seleccione una losa:"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
