--- a/app/src/main/res/layout/activity_lista_u.xml
+++ b/app/src/main/res/layout/activity_lista_u.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:backgroundTint="#8BC34A"
-    tools:context=".actividades.actividades.admin.ListaU">
+    tools:context=".actividades.actividades.admin.ListaUsuarios_Activity">
 
     <LinearLayout
         android:layout_width="match_parent"
