--- a/app/src/main/res/layout/activity_listar_reservas_admin.xml
+++ b/app/src/main/res/layout/activity_listar_reservas_admin.xml
@@ -84,7 +84,7 @@
             android:id="@+id/txtvMonto_Adm"
             android:layout_width="match_parent"
             android:layout_height="21dp"
-            android:text="Cargando..."
+            android:text="Suma total de montos"
             android:textStyle="bold" />
 
         <TextView
