update admi listarrsv

--- a/app/src/main/res/layout/list_reservas.xml
+++ b/app/src/main/res/layout/list_reservas.xml
@@ -81,16 +81,6 @@
                         android:textAllCaps="true"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/textView36"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="losa:"
-                        android:textAlignment="viewStart"
-                        android:textAllCaps="true"
-                        android:textStyle="bold" />
-
                 </LinearLayout>
 
                 <LinearLayout
@@ -126,21 +116,17 @@
                         android:layout_height="wrap_content"
                         android:text="pendiente" />
 
-                    <TextView
-                        android:id="@+id/txtv_losa_rcv_ListRsv"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="LOSA1" />
-
                 </LinearLayout>
 
             </LinearLayout>
 
             <Button
                 android:id="@+id/btn_verRsv_rcv_ListRsv"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:drawableRight="@drawable/icon_recibo_pago2"
                 android:text="Ver PAGO" />
 
             <TextView
