--- a/app/src/main/res/layout/fragment_losa3.xml
+++ b/app/src/main/res/layout/fragment_losa3.xml
@@ -73,6 +73,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/car3BtnRegresar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="30dp"
+                android:layout_weight="1"
+                android:backgroundTint="#B3FF5722"
+                android:hint="@string/car3BtnRegresar"
+                android:textAllCaps="false"
+                android:textColorHint="@color/white" />
+
             <Button
                 android:id="@+id/car3BtnAceptar"
                 android:layout_width="match_parent"
@@ -85,19 +99,6 @@
                 android:layout_marginTop="10dp"
                 android:textColorHint="@color/white"
                 android:hint="@string/car3BtnAceptar"/>
-
-            <Button
-                android:id="@+id/car3BtnRegresar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="30dp"
-                android:textAllCaps="false"
-                android:backgroundTint="@color/btnRegOrange"
-                android:textColorHint="@color/white"
-                android:layout_marginTop="10dp"
-                android:hint="@string/car3BtnRegresar"/>
 
         </LinearLayout>
     </LinearLayout>
