--- a/app/src/debug/res/layout/activity_pago.xml
+++ b/app/src/debug/res/layout/activity_pago.xml
@@ -8,6 +8,28 @@
     android:background="@drawable/fondo1"
     tools:context=".actividades.actividades.usuario.pago.PagoActivity">
 
+  <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/txtv_timer_Pago"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="25dp"
+        android:background="#4CAF50"
+        android:backgroundTint="#4CAF50"
+        android:drawableLeft="@drawable/icon_reloj_timer"
+        android:drawablePadding="10dp"
+        android:padding="5dp"
+        android:text="3:00"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        android:textStyle="bold" />
+  </FrameLayout>
+
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="370dp"
       android:layout_height="565dp"
